--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-ads-facebook": "~11.1.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-asset": "~8.4.6",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
     "expo-secure-store": "~11.1.0",
