--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-ads-facebook": "~11.1.0",
-    "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.6",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
     "expo-secure-store": "~11.1.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.11",
     "moment": "^2.29.3",
@@ -44,7 +44,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-updates": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
