--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.7"
+    "expo-updates": "~0.11.7",
+    "expo-font": "~10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
