--- a/package.json
+++ b/package.json
@@ -22,31 +22,31 @@
     }
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "dotenv": "^16.0.0",
-    "expo": "~44.0.0",
-    "expo-ads-facebook": "~11.1.0",
-    "expo-asset": "~8.4.6",
-    "expo-constants": "~13.0.1",
-    "expo-image-picker": "~12.0.1",
-    "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^45.0.0",
+    "expo-ads-facebook": "~11.2.0",
+    "expo-asset": "~8.5.0",
+    "expo-constants": "~13.1.1",
+    "expo-image-picker": "~13.1.1",
+    "expo-secure-store": "~11.2.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
     "moment": "^2.29.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-paper": "^4.11.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.7",
-    "expo-font": "~10.0.4"
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "0.17.7",
+    "expo-updates": "~0.13.4",
+    "expo-font": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
