--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -3,18 +3,22 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - develop
+      - main
 jobs:
   build:
     name: Install and build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Setup repo
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
           cache: npm
-      - name: Setup env
+
+      - name: Setup .env
         run: | 
           echo FIREBASE_API_KEY = ${{secrets.FIREBASE_API_KEY}} > .env
           echo FIREBASE_AUTH_DOMAIN = ${{secrets.FIREBASE_AUTH_DOMAIN}} >> .env
@@ -29,13 +33,16 @@ jobs:
           echo FACEBOOK_REWARD_ADS_ID_ANDROID = ${{secrets.FACEBOOK_REWARD_ADS_ID_ANDROID}} >> .env
           echo FACEBOOK_NATIVE_ADS_ID_IOS = ${{secrets.FACEBOOK_NATIVE_ADS_ID_IOS}} >> .env
           echo FACEBOOK_REWARD_ADS_ID_IOS = ${{secrets.FACEBOOK_REWARD_ADS_ID_IOS}} >> .env
+
       - name: Setup Expo and EAS
         uses: expo/expo-github-action@v7
         with:
           expo-version: 5.x
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
+
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
-      - name: Build on EAS
+
+      - name: Build app
         run: eas build --profile ${GITHUB_REF_NAME} --platform android --non-interactive
