modify update name

--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -6,7 +6,7 @@ on:
       - develop
 jobs:
   update:
-    name: Install and build
+    name: Install and update
     runs-on: ubuntu-latest
     steps:
       - name: Setup repo
