--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Setup .env
         run: | 
+          echo EAS_PROJECT_ID = ${{secrets.EAS_PROJECT_ID}} > .env
           echo FIREBASE_API_KEY = ${{secrets.FIREBASE_API_KEY}} > .env
           echo FIREBASE_AUTH_DOMAIN = ${{secrets.FIREBASE_AUTH_DOMAIN}} >> .env
           echo FIREBASE_PROJECT_ID = ${{secrets.FIREBASE_PROJECT_ID}} >> .env
