--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -4,11 +4,17 @@ on:
   push:
     branches:
       - develop
-      - 'feature/**'
+  pull_request: 
+    branches:
+      - develop
+
 jobs:
   update:
     name: Install and update
     runs-on: ubuntu-latest
+    environment: 
+      name: $GITHUB_REF_NAME
+      url: https://u.expo.dev/$secrets.EAS_PROJECT_ID?channel-name=$GITHUB_REF_NAME
     steps:
       - name: Setup repo
         uses: actions/checkout@v2
