--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -10,9 +10,11 @@ jobs:
   update:
     name: Install and update
     runs-on: ubuntu-latest
+    env:
+      EAS_PROJECT_ID: ${{ secrets.EAS_PROJECT_ID }}
     environment: 
       name: $GITHUB_REF_NAME
-      url: https://u.expo.dev/${{secrets.EAS_PROJECT_ID}}?channel-name=${{GITHUB_REF_NAME}}
+      url: https://u.expo.dev/${env.EAS_PROJECT_ID}?channel-name=${GITHUB_REF_NAME}
     steps:
       - name: Setup repo
         uses: actions/checkout@v2
