--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -12,9 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       EAS_PROJECT_ID: ${{ secrets.EAS_PROJECT_ID }}
+      DEPLOY_NAME: ${{ GITHUB_REF_NAME }}
     environment: 
       name: $GITHUB_REF_NAME
-      url: https://u.expo.dev/${{env.EAS_PROJECT_ID}}?channel-name=${{GITHUB_REF_NAME}}
+      url: https://u.expo.dev/${{env.EAS_PROJECT_ID}}?channel-name=${{env.DEPLOY_NAME}}
     steps:
       - name: Setup repo
         uses: actions/checkout@v2
