--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: 
       name:  ${{ github.ref_name }}
-      url: ${{ step.link.outputs.DEPLOYMENT_URL }}
+      url: ${{ steps.link.outputs.DEPLOYMENT_URL }}
     steps:
       - name: Setup repo
         uses: actions/checkout@v2
