--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -1,5 +1,5 @@
 name: EAS Update
-on: 
+on:
   workflow_dispatch:
   push:
     branches:
@@ -10,8 +10,10 @@ jobs:
   update:
     name: Install and update
     runs-on: ubuntu-latest
-    environment: 
-      name:  ${{ github.ref_name }}
+    env:
+      ENV_PROJECT_ID: ${{ secrets.EAS_PROJECT_ID }}
+    environment:
+      name: ${{ github.ref_name }}
       url: ${{ steps.link.outputs.DEPLOYMENT_URL }}
     steps:
       - name: Setup repo
@@ -24,7 +26,7 @@ jobs:
           cache: npm
 
       - name: Setup .env
-        run: | 
+        run: |
           echo EAS_PROJECT_ID = ${{secrets.EAS_PROJECT_ID}} > .env
           echo FIREBASE_API_KEY = ${{secrets.FIREBASE_API_KEY}} > .env
           echo FIREBASE_AUTH_DOMAIN = ${{secrets.FIREBASE_AUTH_DOMAIN}} >> .env
@@ -57,4 +59,4 @@ jobs:
         id: link
         run: |
           echo "::set-output name=DEPLOYMENT_NAME::${{github.ref_name}}"
-          echo "::set-output name=DEPLOYMENT_URL::https://u.expo.dev/${{secrets.EAS_PROJECT_ID}}?channel-name=${{github.ref_name}}"
+          echo "::set-output name=DEPLOYMENT_URL::https://u.expo.dev/$ENV_PROJECT_ID?channel-name=${{github.ref_name}}"
