--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Setup .env
         run: |
-          echo EAS_PROJECT_ID = ${{EAS_PROJECT_ID}} > .env
+          echo EAS_PROJECT_ID = $EAS_PROJECT_ID > .env
           echo FIREBASE_API_KEY = ${{secrets.FIREBASE_API_KEY}} > .env
           echo FIREBASE_AUTH_DOMAIN = ${{secrets.FIREBASE_AUTH_DOMAIN}} >> .env
           echo FIREBASE_PROJECT_ID = ${{secrets.FIREBASE_PROJECT_ID}} >> .env
@@ -59,4 +59,4 @@ jobs:
         id: link
         run: |
           echo "::set-output name=DEPLOYMENT_NAME::${{github.ref_name}}"
-          echo "::set-output name=DEPLOYMENT_URL::https://u.expo.dev/${{EAS_PROJECT_ID}}?channel-name=${{github.ref_name}}"
+          echo "::set-output name=DEPLOYMENT_URL::https://u.expo.dev/$EAS_PROJECT_ID?channel-name=${{github.ref_name}}"
