modify eas config

--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -3,11 +3,18 @@ on:
   workflow_dispatch:
   push:
     branches:
+      - develop
       - main
+    paths:
+      - './app.config.js'
+      - './babel.config.js'
+
 jobs:
   build:
     name: Install and build
     runs-on: ubuntu-latest
+    env:
+      EAS_PROJECT_ID: 25f5a515-67fa-4180-a47e-1d0d1a67ea3f
     steps:
       - name: Setup repo
         uses: actions/checkout@v2
@@ -20,7 +27,8 @@ jobs:
 
       - name: Setup .env
         run: | 
-          echo FIREBASE_API_KEY = ${{secrets.FIREBASE_API_KEY}} > .env
+          echo EAS_PROJECT_ID = $EAS_PROJECT_ID > .env
+          echo FIREBASE_API_KEY = ${{secrets.FIREBASE_API_KEY}} >> .env
           echo FIREBASE_AUTH_DOMAIN = ${{secrets.FIREBASE_AUTH_DOMAIN}} >> .env
           echo FIREBASE_PROJECT_ID = ${{secrets.FIREBASE_PROJECT_ID}} >> .env
           echo FIREBASE_STORAGE_BUCKET = ${{secrets.FIREBASE_STORAGE_BUCKET}} >> .env
