--- a/eas.json
+++ b/eas.json
@@ -10,8 +10,7 @@
       "ios": {
         "simulator": true
       },
-      "channel": "develop",
-      "distribution": "internal"
+      "channel": "develop"
     },
     "main": {}
   },
