--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Setup .env
         run: |
+          sed -i "s@.env@@g" .gitignore
           echo EAS_PROJECT_ID = $EAS_PROJECT_ID > .env
           echo FIREBASE_API_KEY = ${{secrets.FIREBASE_API_KEY}} >> .env
           echo FIREBASE_AUTH_DOMAIN = ${{secrets.FIREBASE_AUTH_DOMAIN}} >> .env
