[EXPO] Change eas build config

--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,8 @@
   },
   "build": {
     "develop": {
+      "distribution": "internal",
+      "developmentClient": true,
       "android": {
         "buildType": "apk"
       },
