--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - develop
       - main
-    paths:
-      - '*.config.js'
 
 jobs:
   build:
@@ -49,8 +47,16 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
+      - name: Verify Changed files
+        uses: tj-actions/verify-changed-files@v11.1
+        id: verify-changed-files
+        with:
+          files: *.config.js
+
       - name: Install dependencies
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: npm ci --legacy-peer-deps
 
       - name: Build app
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: eas build --profile ${GITHUB_REF_NAME} --platform android --non-interactive
