--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - develop
+      # - develop
       - main
 
 jobs:
@@ -43,23 +43,23 @@ jobs:
       - name: Setup Expo and EAS
         uses: expo/expo-github-action@v7
         with:
-          expo-version: 5.x
+          expo-version: latest
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Verify Changed files
-        uses: tj-actions/verify-changed-files@v11.1
-        id: verify-changed-files
-        with:
-          files: |
-            *.config.js
-            eas-build.yml
-            eas.json
+      # - name: Verify Changed files
+      #   uses: tj-actions/verify-changed-files@v11.1
+      #   id: verify-changed-files
+      #   with:
+      #     files: |
+      #       *.config.js
+      #       eas-build.yml
+      #       eas.json
 
       - name: Install dependencies
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        # if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: npm ci --legacy-peer-deps
 
       - name: Build app
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        # if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: eas build --profile ${GITHUB_REF_NAME} --platform all --non-interactive
