[EXPO] Modify build config

--- a/eas.json
+++ b/eas.json
@@ -16,6 +16,7 @@
     },
     "main": {
       "channel": "main",
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
       },
