--- a/package.json
+++ b/package.json
@@ -27,31 +27,31 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "dotenv": "^16.0.0",
-    "expo": "^45.0.0",
+    "expo": "^46.0.0",
     "expo-ads-facebook": "~11.2.0",
-    "expo-asset": "~8.5.0",
-    "expo-constants": "~13.1.1",
-    "expo-image-picker": "~13.1.1",
-    "expo-secure-store": "~11.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
+    "expo-asset": "~8.6.1",
+    "expo-constants": "~13.2.4",
+    "expo-image-picker": "~13.3.1",
+    "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.11",
     "moment": "^2.29.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-paper": "^4.11.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
-    "expo-updates": "~0.13.4",
-    "expo-font": "~10.1.0",
-    "expo-dev-client": "~1.0.1",
+    "react-native-web": "~0.18.7",
+    "expo-updates": "~0.14.7",
+    "expo-font": "~10.2.0",
+    "expo-dev-client": "~1.3.1",
     "@storybook/react-native": "next"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "@storybook/addon-actions": "^5.3",
     "@storybook/addon-knobs": "^5.3",
     "@storybook/addon-links": "^5.3",
