--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "expo-secure-store": "~11.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
-    "firebase": "^9.6.11",
+    "firebase": "9.6.11",
     "moment": "^2.29.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
